Wed Jul 16 14:40:40 1997  Jim Blandy  <jimb@floss.red-bean.com>

	* Makefile.am: Install SCSH files in $(datadir)/guile, not in the
	version-specific directory.  I think SCSH shouldn't be tied to a
	specific version of Guile.
	* Makefile.in: Regenerated.

Sun Jun 15 06:06:58 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* configure.in: change the version to 1.2a so it will install
	in the right place (maybe).

	* README: now it's a port of scsh 0.5.1.

	* init.scm: don't include re.scm until Guile's interface is stable.

	* match:start, match:end, match:substring updated from scsh 0.5.1.
	regexp-substitute, regexp-substitute/global, regexp-num-submatches:
	new from scsh 0.5.1.

	* syscalls.scm (%filter-C-strings!): moved from re.scm, following
	scsh 0.5.1.

	* utilities.scm: new version from scsh 0.5.1, adds string-replace!,
	substring-replace!, string-reduce.

	* time.scm: minor changes for scsh 0.4.4 -> 0.5.1

	* rw.scm: delete y-or-n? and *y-or-n-eof-count* which have moved
	in scsh 0.5.1 (to scsh.scm, but we don't need them).

Tue May 13 11:59:28 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* Makefile.in, aclocal.m4, configure: Regenerated using automake
	1.1p.

	Lie to automake in a different way, to get it to install things in
	the right place.
	* configure.in (AM_INIT_AUTOMAKE): Call the package guile-scsh,
	not guile; this determines the name of the disty.
	* Makefile.am (scshdir): Renamed from subpkgdatadir.  Use
	$(datadir)/guile instead of $(pkgdatadir), since the latter's
	value uses the package name given to AM_INIT_AUTOMAKE.
	(scsh_DATA): Renamed from subpkgdata_DATA.
	(EXTRA_DIST): Fix reference.
	* Makefile.in, configure: Regenerated.

	Make SCSH into a separate distribution.
	* README: Renamed from README.PORT.
	* configure.in: Use AM_INIT_AUTOMAKE, not AM_INIT_GUILE_MODULE.
	* Makefile.am: Don't use @module@ to decide where to install
	things.  No need to mention README.PORT; automake will grab it